@@ -592,29 +592,24 @@ class Groups_Controller {
 	private static function is_single_activate() {
 		$is = false;
 		$groups_basename = plugin_basename( GROUPS_FILE );
-		if ( isset( $_REQUEST['action'] ) ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-			switch ( $_REQUEST['action'] ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
+		$action = groups_sanitize_request( 'action' );
+		if ( is_string( $action ) ) {
+			switch ( $action ) {
 				case 'activate':
 					// Single plugin activation of Groups:
-					if ( !empty( $_REQUEST['plugin'] ) ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-						$slug = wp_unslash( $_REQUEST['plugin'] ); // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-						if ( $slug === $groups_basename ) {
-							$is = true;
-						}
+					$slug = groups_sanitize_request( 'plugin' );
+					if ( $slug === $groups_basename ) {
+						$is = true;
 					}
 					break;
 				case 'activate-selected':
 					// Bulk plugin activation of Groups but it is the only plugin being activated:
-					if ( !empty( $_REQUEST['checked'] ) ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-						if ( is_array( $_REQUEST['checked'] ) ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-							if ( count( $_REQUEST['checked'] ) === 1 ) { // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-								$slugs = wp_unslash( $_REQUEST['checked'] ); // phpcs:ignore WordPress.Security.ValidatedSanitizedInput.InputNotSanitized
-								$slug = array_pop( $slugs );
-								if ( $slug === $groups_basename ) {
-									$is = true;
-									break;
-								}
-							}
+					$slugs = groups_sanitize_request( 'checked' );
+					if ( is_array( $slugs ) && count( $slugs ) === 1 ) {
+						$slug = array_pop( $slugs );
+						if ( $slug === $groups_basename ) {
+							$is = true;
+							break;
 						}
 					}
 					break;
